# webusb

./: .gitignore  Cargo.toml  README.md  bors.toml  coverage.sh  mod.ts
.github/workflows/: deno.yml  tests.yml
bindings/: bindings.ts
examples/: blink.rs  deno.ts  deno_blink.ts
ffi/: Cargo.toml  lib.rs
src/: backend.rs  constants.rs  descriptors.rs  ffi.rs  lib.rs
