[package]
name = "webusb"
description = "WebUSB API implementation in Rust"
version = "0.3.0"
authors = ["Divy Srivastava <dj.srivastava23@gmail.com>"]
edition = "2018"
repository = "https://github.com/littledivy/webusb"
license = "MIT"
keywords = [
    "usb",
    "webusb"
]

[lib]
crate-type = ["cdylib"]

[features]
default = ["libusb"]
wasm = ["web-sys", "js-sys", "wasm-bindgen", "wasm-bindgen-futures"]
libusb = ["rusb", "libusb1-sys"]
deno_ffi = ["deno_bindgen", "serde", "libusb", "once_cell", "tokio"]
serde_derive = ["serde"]

[dependencies]
rusb = { version = "0.8.1", optional = true }
libusb1-sys = { version = "0.5.0" , optional = true }
web-sys = { version = "0.3.55", features = ["Window", "Navigator", "Usb", "UsbDevice", "UsbConfiguration", "UsbInterface", "UsbAlternateInterface", "UsbEndpoint", "UsbDirection", "UsbEndpointType"], optional = true }
js-sys = { version = "0.3.55", optional = true }
wasm-bindgen-futures = { version = "0.4.28", optional = true }
wasm-bindgen = { version = "0.2.78", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
deno_bindgen = { version = "0.5.0", optional = true }
once_cell = { version = "1.9.0", optional = true }
tokio = { version = "1.12.0", features = ["rt-multi-thread", "rt", "macros"], optional = true }

[dev-dependencies]
# For a loose connection :-)
flaky_test = "0.1.0"
tokio = { version = "1.12.0", features = ["rt-multi-thread", "rt", "macros"] }